<resources>
    <string name="app_name">SlimCat</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_button_notifications">notifications</string>
    <string name="action_about">About</string>
    <string name="action_food">Add Food</string>

    <!-- Cat List -->
    <plurals name="catlist_text_age">
        <item quantity="one">Age: %d year</item>
        <item quantity="other">Age: %d years</item>
    </plurals>
    <string name="catlist_text_weight">Weight: %.2f kg</string>
    <string name="catlist_text_weight_lbs">Weight: %.2f lbs</string>
    <string name="catlist_text_calorie_recommendation">Cal. Rec.: %d kcal today</string>
    <string name="catlist_text_food_amount">%d g</string>
    <string name="catlist_text_food_amount_lbs">%.2f lbs</string>
    <string name="catlist_food_recommendation">Food recommendation:</string>
    <string name="catlist_track_food">Track Food</string>
    <string name="catlist_edit_cat">Edit</string>
    <string name="catlist_hint_add">Nothing here yet. Click the `+` button to register new cats.</string>

    <!-- Food List -->
    <string name="add_food">Add Food</string>
    <string name="title_food_back">Food List</string>
    <string name="food_list_text_calories">Cal.: %d kcal/100g</string>
    <string name="food_list_text_protein">Raw Protein: %.2f %%</string>
    <string name="food_list_text_fat">Raw Fat: %.2f %%</string>
    <string name="food_list_text_ash">Crude Ash: %.2f %%</string>
    <string name="food_list_text_fiber">Raw Fiber: %.2f %%</string>
    <string name="food_list_text_water">Water: %.2f %%</string>

    <!-- Add Food -->
    <string name="addFood_label_name">Name</string>
    <string name="addFood_label_protein">Raw Protein</string>
    <string name="addFood_label_fat">Raw Fat</string>
    <string name="addFood_label_ash">Crude Ash</string>
    <string name="addFood_label_fiber">Raw Fiber</string>
    <string name="addFood_label_water">Water</string>

    <!-- Add Food Hints -->
    <string name="addFood_hint_name">Sheba</string>
    <string name="addFood_hint_percentage">in %</string>
    <string name="addFood_label_water_hint">Hint: In case the percentage of water is not given, use a value between 8–10%.</string>

    <!-- Add cat error messages -->
    <string name="error_add_food">Please enter a name for your food.</string>
    <string name="error_percentage_food">The filled percentages exceed 100%. Please change the input.</string>

    <!-- Add cat -->
    <string name="add_cat">Add Cat</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="label_name">Name</string>
    <string name="label_race">Race</string>
    <string name="label_dob">D.o.b.</string>
    <string name="btn_dob">Pick Date</string>
    <string name="label_size">Size</string>
    <string name="label_weight">Weight</string>
    <string name="label_gender">Gender</string>
    <string name="label_picture">Picture</string>
    <string name="label_obese">Obese</string>
    <string name="label_overweight">Overweight-prone</string>
    <string name="label_hospitalized">Hospitalized</string>
    <string name="label_gender_male">male</string>
    <string name="label_gender_female">female</string>
    <string name="label_neutered">Neutered</string>
    <string name="label_gestation">Gestation</string>
    <string name="label_lactation">Lactation</string>
    <string name="output_dob">yyyy-mm-dd</string>
    <!-- Add cat hints -->
    <string name="input_name_hint">e.g. Lucky</string>
    <string name="input_race_hint">e.g. Toyger</string>
    <string name="input_size_hint">in cm</string>
    <string name="input_weight_hint">in kg</string>
    <string name="input_size_hint_imperial">in inch</string>
    <string name="input_weight_hint_imperial">in lbs</string>
    <!-- Add cat error messages -->
    <string name="error_create_cat">Please enter a name for your cat.</string>
    <string name="error_delete_cat">Please enter the name of the cat you want to delete.</string>

    <!-- Calendar picker -->
    <string name="cancel">Cancel</string>

    <!-- Track Food -->
    <string name="trackfood_reset">Reset</string>
    <string name="trackfood_hint">Please enter the amount of food fed today. The recommendations will update accordingly.</string>

    <!-- Settings -->
    <string name="settings_name">Name</string>
    <string name="settings_email">Email</string>
    <string name="settings_gender">Gender</string>
    <string name="settings_gender_male">male</string>
    <string name="settings_gender_female">female</string>
    <string name="settings_unit_of_measurement">Unit</string>
    <string name="settings_unit_of_measurement_kg">metric</string>
    <string name="settings_unit_of_measurement_lbs">imperial</string>
    <string name="settings_language">Language</string>
    <!--<string name="settings_language_en">en</string>
    <string name="settings_language_de">de</string>-->

    <!-- About -->
    <string name="about_text">Note: The given calories are only a recommendation and are in no way intended to use without consulting a vet beforehand.
                              The recommendations given by the app should only be used as a guideline. <br/></string>
    <string name="intro_names">This app was developed by:</string>
    <string name="PO">Georg Niess</string>
    <string name="SCRUM">Günther Moser</string>
    <string name="Dev1">Baher El-Banna</string>
    <string name="Dev2">Benedict Osei-Tutu</string>
    <string name="Dev3">Christoph René Ladler</string>
    <string name="Dev4">Constantin Piber</string>
    <string name="Dev5">Matthias Fischer</string>
    <string name="Dev6">Nolan Wieninger</string>
    <string name="Dev7">Patrick Andrawes</string>
    <string name="Dev8">Thomas Végh</string>

    <string-array name="settings_gender">
        <item>male</item>
        <item>female</item>
        <item>diverse</item>
    </string-array>

    <string-array name="settings_language">
        <item>english / 英语</item>
        <item>mandarin (chinese) / 官话</item>
    </string-array>

    <!-- Settings hints-->
    <string name="settings_name_hint">e.g. John Doe </string>
    <string name="settings_email_hint">e.g. john.doe@email.com</string>

    <!-- Details -->
    <string name="title_cat_details">Cat Details</string>
    <string name="title_activity_settings">User Settings</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_about">About Page</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Notifications -->
    <string name="notification_set">Notification is set for: </string>
    <string name="notification_Alarm">No time has been selected for the notification yet.</string>
    <string name="notifications_time">Please select a time when you want to receive the notification.</string>
    <string name="notifications_day">Please select the days when you would like to receive a notification.</string>
    <string name="notifications_text_timePicker_Button">Set Time for Notification</string>
    <string name="notifications_Monday">Monday</string>
    <string name="notifications_Tuesday">Tuesday</string>
    <string name="notifications_Wednesday">Wednesday</string>
    <string name="notifications_Thursday">Thursday</string>
    <string name="notifications_Friday">Friday</string>
    <string name="notifications_Saturday">Saturday</string>
    <string name="notifications_Sunday">Sunday</string>

</resources>