<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/settings_view_margin">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="173dp"
                android:layout_height="180dp"
                android:layout_marginBottom="@dimen/settings_row_margin"
                android:contentDescription="@string/label_picture"
                tools:srcCompat="@tools:sample/avatars" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/settings_row_margin"
                    android:gravity="center_vertical">


                    <TextView
                        android:id="@+id/settings_label_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/settings_tv_lineheight"
                        android:text="@string/settings_name"
                        android:textSize="@dimen/settings_tv_textsize" />

                    <EditText
                        android:id="@+id/settings_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/settings_tv_input_margin"
                        android:layout_marginLeft="@dimen/settings_tv_input_margin"
                        android:layout_weight="1"
                        android:hint="@string/settings_name_hint"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/settings_input_textsize" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/settings_row_margin"
                    android:gravity="center_vertical">


                    <TextView
                        android:id="@+id/settings_label_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/settings_tv_lineheight"
                        android:text="@string/settings_email"
                        android:textSize="@dimen/settings_tv_textsize" />

                    <EditText
                        android:id="@+id/settings_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/settings_tv_input_margin"
                        android:layout_marginLeft="@dimen/settings_tv_input_margin"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/settings_email_hint"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/settings_input_textsize" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/settings_row_margin"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/settings_tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/settings_tv_lineheight"
                        android:text="@string/settings_gender"
                        android:textSize="@dimen/settings_tv_textsize" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/settings_tv_input_margin"
                        android:layout_marginLeft="@dimen/settings_tv_input_margin"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_gender_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/settings_gender_male"
                            android:textSize="@dimen/settings_tv_textsize" />

                        <SeekBar
                            android:id="@+id/settings_seek_gender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="1"
                            android:progress="1" />

                        <TextView
                            android:id="@+id/settings_gender_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:focusable="auto"
                            android:text="@string/settings_gender_female"
                            android:textSize="@dimen/settings_input_textsize" />
                    </LinearLayout>
                </TableRow>


            </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>